# diskfmt

./: Cargo.toml  README.md
.github/workflows/: appimage.yml  build.yml
docs/: index.html
packaging/linux/: diskfmt.metainfo.xml
packaging/linux/appimage/: create_appdir.sh  create_appimage.py  diskfmt.desktop
src/: common.rs  config.rs  lib.rs  main.rs  style.rs  utils.rs
src/backends/: mock.rs  mod.rs  udisks.rs
src/cli/: mod.rs
src/gui/: gui_utils.rs  mod.rs  view.rs
